# pmf-benchmark

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  pyproject.toml  run_er_evaluation.py
.github/workflows/: ci.yml
configs/er/: er_fast.yaml
configs/event_log/: BPI2017.yaml  BPI2019_1.yaml  Hospital_Billing.yaml  Sepsis.yaml
data_archive/processed/: time_series_df.h5
scripts/: run_er_evaluation_hydra.py
src/pmf_benchmark/: __init__.py
src/pmf_benchmark/data/: __init__.py
src/pmf_benchmark/metrics/: __init__.py
src/pmf_benchmark/metrics/entropic_relevance/: __init__.py  er_evaluation.py  run_fast.py
src/pmf_benchmark/metrics/entropic_relevance/utils/: __init__.py  background_model.py  dfg_constructor.py  er_calculator.py
tests/: test_placeholder.py
