[project]
name = "pmf-benchmark"
version = "0.1.0"
description = "A comprehensive framework for preprocessing event logs, generating time series data from directly-follows relations, and benchmarking various forecasting models. Supports multiple model types including baseline, statistical, regression, and deep learning approaches."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "darts>=0.33.0",
    "matplotlib>=3.9.4",
    "numpy>=1.19.0,<2.0.0",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "pm4py>=2.7.12.4",
    "torch>=2.5.1",
    "wandb>=0.19.1",
    "tables>=3.10.2",
    "lightgbm>=4.5.0",
    "prophet>=1.1.6",
    "plotly>=5.24.1",
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
    "optuna-dashboard>=0.17.0",
    "nixtla>=0.6.6",
    "pyarrow>=18.1.0",
    "hydra-core>=1.3.2",
    "optuna-integration>=4.2.1",
    "pydot>=3.0.4",
    "reportlab>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "bandit[toml]>=1.7.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]
extend-exclude = [
    "ER",
    "ER_v2",
    "archive",
    "data",
    "data_archive",
    "dfgs",
    "entroclus",
    "notebooks",
    "results",
    "results_archive",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["pmf_benchmark"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# MyPy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "archive/",
    "notebooks/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["data", "logs", "results", "archive"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src/pmf_benchmark"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Bandit Configuration
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "archive", "notebooks"]
skips = ["B101"]  # Skip assert warnings (used in tests)
